# Aetherforge

./: README.md
aetherforge/: Cargo.toml
aetherforge/contracts/: AetherForgeGovernance.sol  AetherForgeRewards.sol
aetherforge/contracts/migrations/: 1_deploy_contracts.js
aetherforge/frontend/: package.json
aetherforge/frontend/src/Public/: index.html
aetherforge/frontend/src/components/: App.vue  MiningStats.vue  PuzzleInterface.vue  ValidatorDashboard.vue
aetherforge/scripts/: README.md  deploy_contracts.sh  run_tests.sh
aetherforge/src/: lib.rs  main.rs
aetherforge/src/difficulty/: mod.rs
aetherforge/src/pos/: consensus.rs  mods.rs  staking.rs
aetherforge/src/pow/: Tmemory_hard.rs  matrix_ops.rs  memory_hard.rs  mod.rs
aetherforge/src/pow/puzzles/: audio_analysis.rs  coding_chalange.rs  image_recognition.rs  mod.rs
aetherforge/src/tests/: difficulty_tests.rs  mod.rs  pos_tests.rs  pow_tests.rs
aetherforge/src/utils/: crypto.rs  hashing.rs  mod.rs
