[package]
name = "aetherforge"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.4"
ndarray = "0.15"
rand = "0.8"
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
opencv = "0.63" 
rhai = "1.14"
hound = "3.5"
rustfft = "6.0"
sha3 = "0.10"
hound = "3.4"
rustfft = "6.0"
thiserror = "1.0"
k256 = "0.13"
rand_core = "0.6"
elliptic-curve = "0.13"